
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "fastapi[all]>=0.98.0",
    "streamlit>=1.23.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "doppler run -- python start.py"
