
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "fastapi[all]>=0.98.0",
    "streamlit>=1.23.1",
    "langchain>=0.0.216",
    "openai>=0.27.8",
    "google-search-results>=2.4.2",
    "google-api-python-client>=2.90.0",
    "wolframalpha>=5.0.0",
    "unstructured>=0.8.1",
    "setuptools>=68.0.0",
    "pinecone-client>=2.2.2",
    "tiktoken>=0.4.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "doppler run -- python start.py"
